Fix svg on mobile

--- a/src/UI/pages/portfolio/Portfolio.scss
+++ b/src/UI/pages/portfolio/Portfolio.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-items: center;
+  justify-content: center;
   position: relative;
 
   .content {
@@ -54,14 +54,15 @@
     padding: 0 1em;
     width: 100%;
     align-items: center;
-    height: 75vh;
+    max-height: 500px;
+    min-height: 500px;
     gap: 0;
     position: relative;
 
     .sphere {
       position: absolute;
       left: -14em;
-      top: calc((75vh - 30em) / 2);
+      top: calc((500px - 30em) / 2);
       min-height: 30em;
       min-width: 20em;
       background-color: var(--page-background-dark);
@@ -116,10 +117,12 @@
       padding-left: 5em;
       position: relative;
       height: 100%;
+      display: flex;
 
       .curve-path {
         width: 6em;
         height: 100%;
+        max-height: 200px;
         position: absolute;
 
         path {
@@ -137,6 +140,7 @@
 
       &.left {
         grid-area: svg-left;
+        align-items: flex-end;
       }
 
       &.right {
